[gd_scene load_steps=2 format=3 uid="uid://ufd8otc10oaw"]

[ext_resource type="Script" path="res://Scenes/login_screen.gd" id="1_gy1yd"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gy1yd")
avatar_screen_scene = "res://Scenes/avatar_screen.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -33.0
offset_right = 94.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Username" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[connection signal="text_submitted" from="VBoxContainer/Username" to="." method="_on_username_text_submitted"]
[connection signal="text_submitted" from="VBoxContainer/Password" to="." method="_on_password_text_submitted"]
[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
